[package]
name = "cardano-valkyoth-cbor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Bounded Cardano CBOR and CDDL boundary."

[features]
default = []
std = []

[dependencies]

[lints]
workspace = true
