[package]
name = "cardano-valkyoth-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Era-aware Cardano ledger boundary."

[features]
default = []
std = []

[dependencies]

[lints]
workspace = true
