[package]
name = "cardano-valkyoth-primitives"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Cardano primitive domain boundaries."

[features]
default = []
std = []

[dependencies]

[lints]
workspace = true
