[package]
name = "cardano-valkyoth-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Cardano query and submit trust-policy boundary."

[features]
default = []
std = []

[dependencies]

[lints]
workspace = true
