[package]
name = "cardano-valkyoth-script"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Cardano script boundary."

[features]
default = []
std = []

[dependencies]

[lints]
workspace = true
