[package]
name = "cardano-valkyoth-signer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Cardano signer isolation boundary."

[features]
default = []
std = []

[dependencies]

[lints]
workspace = true
