[package]
name = "cardano-valkyoth-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Cardano fixtures and adversarial test helpers."

[features]
default = []
std = []

[dependencies]

[lints]
workspace = true
