[package]
name = "cardano"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "no_std-first Cardano protocol building blocks for Rust."

[features]
default = []
std = []
node = []
rpc = []
signer = []
testkit = []

[dependencies]

[lints]
workspace = true
